Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41657

Potential segfault in QImage::detach()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0 Alpha
    • GUI: Painting
    • None
    • any
    • ba9ac942f0b27888648e21d8179f86448c953d96

    Description

      In one code patch of QImage::detach() copy() is called which can result in a zeroed d (if malloc in the QImage contructor fails).

      Therefore the line "++d->detach_no;" should be prepended by an "if (d)" to prevent a seqfault.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            helmut.muelner Helmut Mülner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes